[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Game.gd" type="Script" id=2]
[ext_resource path="res://Entities/Human.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/GravityBold-32.tres" type="DynamicFont" id=4]
[ext_resource path="res://Systems/IncreasingPitchPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Background.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "advance_turn"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/PlayerTurnLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/PlayerTurnLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 318, 712.96 ), Vector2( 224, 604 ), Vector2( 318, 712.96 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( -32, 0 )
scale = Vector2( 1.1, 1.1 )
centered = false
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PlayerTurnLabel" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.97
anchor_right = 0.5
anchor_bottom = 0.97
margin_left = -194.0
margin_top = -32.0
margin_right = 194.0
custom_fonts/font = ExtResource( 4 )
text = "Player 1's turn"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" parent="." instance=ExtResource( 1 )]
position = Vector2( 114, 118 )

[node name="MemorizingTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/advance_turn = SubResource( 1 )

[node name="PlayerPositions" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="1" type="Position2D" parent="PlayerPositions"]
position = Vector2( -256, 256 )

[node name="2" type="Position2D" parent="PlayerPositions"]
position = Vector2( 1280, 256 )

[node name="Players" type="Node" parent="."]

[node name="1" parent="Players" instance=ExtResource( 3 )]

[node name="CardFoundSFX" parent="." instance=ExtResource( 5 )]
bus = "Sound"
increment = 0.125
[connection signal="animation_ended" from="Board" to="." method="_on_Board_animation_ended"]
[connection signal="choose_card" from="Board" to="." method="_on_Board_choose_card"]
[connection signal="timeout" from="MemorizingTimer" to="." method="_on_MemorizingTimer_timeout"]
